apps/hash-graph/lib/query-builder-derive/tests/ui/fail/unknown_attr_variant.stderr
error: unrecognized attribute unknown
 --> tests/ui/fail/unknown_attr_variant.rs:5:15
  |
5 |     #[builder(unknown = "value")]
  |               ^^^^^^^
